FIX spacing behind top nav

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,6 +28,14 @@
   font-size: 17px;
 }
 
+.topnavb a {
+  float: left;
+  color: #333;
+  text-align: center;
+  padding: 14px 16px;
+  font-size: 17px;
+}
+
 .topnav a:hover {
   background-color: #ddd;
   color: black;
